<resources>
    <string name="app_name">BasicWeatherApp</string>
    <string name="done">Done</string>
    <string name="sea_level">Sea Level:</string>
    <string name="title_bar">Basic Weather App</string>
    <string name="default_city_name">Unknown Name</string>
    <string name="condition">Condition:</string>
    <string name="temperature">Temperature:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="humidity">Humidity:</string>
    <string name="default_text">Blah Blah Blah</string>
    <string name="image_of_city">Image of City</string>
    <string name="main_image">Main Image</string>
    <string name="search">Search</string>
</resources>
