<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004D40"
    tools:context=".CityWeather">

    <Button
        android:id="@+id/doneButton"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="#258558"
        android:gravity="center"
        android:shadowColor="#0C0101"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/done"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/cityImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seaLevel"
        app:layout_constraintVertical_bias="0.689" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sea_level"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/default_text"
        android:textColor="#76FF03"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/seaLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/default_text"
        android:textColor="#76FF03"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/default_text"
        android:textColor="#76FF03"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="#76FF03"
        android:gravity="center"
        android:text="@string/title_bar"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/default_city_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" />

    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="170dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start|center_horizontal|center_vertical"
        android:popupBackground="#258558"
        app:layout_constraintStart_toStartOf="@+id/cityName"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/condition"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/temperature"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/wind_speed"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/humidity"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/default_text"
        android:textColor="#76FF03"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/default_text"
        android:textColor="#76FF03"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/text1"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/text1" />

    <ImageView
        android:id="@+id/cityImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_of_city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>